# openwrt-source

./: README.md  feeds.conf.default
.github/workflows/: Delete_Old_Workflow_Runs.yml  Refresh.yml  op.yml
defconfig/: bananapi-bpi-r3-mini.config  mt7981-ax3000.config  mt7986-ax4200.config  mt7986-ax6000-256m.config  mt7986-ax6000.config  mt7986-ax7800.config  mt7986-ax8400.config  openwrt-one.config  wirelesstag-zx7981pd-ubootmod.config  zyxel-ex5601-t0.config
include/: target.mk
package/mtk/applications/datconf/src/datconf/ucode/: CMakeLists.txt  datconf.c
package/mtk/applications/datconf/src/datconf/ucode/example/: example.uc
patch/fix/: 044-fix-band-steering-daemon-pid-takeover.patch
patch/patches-6.12/: 999-crypto-01-add-eip197-inside-secure-support.patch  999-crypto-03-avoid-rcu-stall.patch  999-crypto-04-extend-xfrm-packet-mode.patch  999-crypto-05-add-xfrm-fragment-before-encrypt.patch  999-devapc-01-soc-mediatek-add-mt798x-support.patch  999-dts-05-arm64-dts-mediatek-add-mt7987-cpufreq-cooling-device.patch  999-dts-mt7981-rfb-03-add-pwm-pin-and-devices.patch  999-dts-mt7981-rfb-10-arm64-dts-mediatek-add-pmu-support.patch  999-dts-mt7986a-rfb-06-arm64-dts-mediatek-enable-trng.patch  999-dts-mt7986a-rfb-12-arm64-dts-mediatek-add-spim-nor-support.patch  999-dts-mt7986a-rfb-15-arm64-dts-mediatek-enable-watchdog.patch  999-dts-mt7986a-rfb-16-arm64-dts-mediatek-add-pmu-support.patch  999-dts-mt7986b-rfb-04-arm64-dts-mediatek-enable-watchdog.patch  999-dts-mt7988a-rfb-02-arm64-dts-mediatek-add-dt-overlay-related-dts.patch  (+91 more)
sh/: op.sh
(+150 files in other folders)
